--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
+	<div class="container">
+		<div id="buttons">
+		  <button id="play-rock">Kamień</button>
+		  <button id="play-paper">Papier</button>
+		  <button id="play-scissors">Nożyce</button>
+		</div>
+		<div id="messages"></div>
+	  </div>
 </body>
 </html>
